# scamble

./: .gitignore  Cargo.toml  README.md  build.rs  noisy.m4a
.github/workflows/: rust.yml
cassette_player/: Cargo.toml
cassette_player/src/: cassette_player.rs  lib.rs
libs/: wrapper.h
src/: click_simulator_2000.rs  custom_dsp.rs  data.rs  dynamics.rs  exact.rs  example.rs  fantasy.rs  lib.rs  noise_reduction.rs  raw_bindings.rs  result.rs  simulate.rs  vocoder.rs  windy.rs
src/dsp/: decode.rs  interop.rs  mod.rs  signal.rs
src/effects/: cassette_player.rs  click_simulator_2000.rs  dynamics.rs  exact.rs  fantasy.rs  mod.rs  noise_reduction.rs  vocoder.rs  windy.rs
src/fmod/: channel.rs  channel_group.rs  custom_dsp.rs  dsp.rs  mod.rs  sound.rs  system.rs
tcp_effects/: Cargo.toml
tcp_effects/src/: lib.rs
tcp_effects/src/effects/: click_simulator_2000.rs  dynamics.rs  exact.rs  fantasy.rs  mod.rs  noise_reduction.rs  vocoder.rs  windy.rs
tester/: Cargo.toml
tester/src/: dsp_lenses.rs  main.rs  spectrogram.rs
