[package]
name = "scamble"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Library for building FMOD DSPs"
repository = "https://github.com/l-Luna/scamble"
documentation = "https://docs.rs/scamble/latest/scamble/"
keywords = ["fmod", "dsp"]
categories = ["multimedia::audio"]

[workspace]
members = ["tcp_effects", "cassette_player"]

[dependencies]
hound = "3.5.1"

[build-dependencies]
bindgen = "0.71.1"